--- a/models/staging/sqlserver/_sql_server_dbo_models.yml
+++ b/models/staging/sqlserver/_sql_server_dbo_models.yml
@@ -4,28 +4,40 @@ models:
   - name: addresses
     columns:
       - name: address_id
+        data_type: varchar(50)
         data_tests:
           - unique
       - name: zipcode
+        data_type: number
       - name: country
+        data_type: varchar(50)
       - name: address
+        data_type: varchar(150)
       - name: state
+        data_type: varchar(50)
       - name: _fivetran_deleted
       - name: _fivetran_synced
 
   - name: events
     columns:
       - name: event_id
+        data_type: VARCHAR(50)
       - name: page_url
+        data_type: VARCHAR(200)
       - name: event_type
+        data_type: VARCHAR(50)
       - name: user_id
+        data_type: VARCHAR(50)
       - name: product_id
+        data_type: VARCHAR(50)
       - name: session_id
+        data_type: VARCHAR(50)
       - name: created_at
       - name: order_id
+        data_type: VARCHAR(50)
       - name: _fivetran_deleted
       - name: _fivetran_synced
-
+    
   - name: orders
     columns:
       - name: order_id
@@ -58,19 +70,53 @@ models:
       - name: _fivetran_synced
 
   - name: products
+    config:
+      contract:
+        enforced: true
+    description: >
+      Data about all products in demo.
     columns:
       - name: product_id
-      - name: price
-      - name: name
+        data_tests:
+          - not_null
+        data_type: text
+        constraints:
+          - type: not_null
+        description: >
+          UUID for each unique product on platform.
+      - name: product_name
+        data_type: TEXT                      
+        constraints:
+          - type: not_null
+        description: >
+          Name of the product.
+      - name: unit_price_usd
+        data_type: real
+        constraints:
+          - type: not_null
+        description: >
+          Price of the product.
       - name: inventory
-      - name: _fivetran_deleted
-      - name: _fivetran_synced
+        data_type: NUMBER                      
+        constraints:
+          - type: not_null
+        description: >
+          Amount of the inventory we have for this product.
+      - name: date_load
+        data_type: TIMESTAMP_TZ
+        constraints:
+          - type: not_null   
+        description: >
+          Date that the data was loaded.
 
   - name: promos
     columns:
       - name: promo_id
+        data_type: varchar(50)
       - name: discount
+        data_type: float
       - name: status
+        data_type: varchar(50)
       - name: _fivetran_deleted
       - name: _fivetran_synced
 
