--- a/models/staging/sqlserver/_sql_server_dbo_models.yml
+++ b/models/staging/sqlserver/_sql_server_dbo_models.yml
@@ -16,7 +16,9 @@ models:
       - name: state
         data_type: varchar(50)
       - name: _fivetran_deleted
+        data_type: boolean
       - name: _fivetran_synced
+        data_type: timestamp_tz(9)
 
   - name: events
     columns:
@@ -33,41 +35,102 @@ models:
       - name: session_id
         data_type: VARCHAR(50)
       - name: created_at
+        data_type: timestamp_tz(9)
       - name: order_id
         data_type: VARCHAR(50)
       - name: _fivetran_deleted
+        data_type: boolean
       - name: _fivetran_synced
-    
+        data_type: timestamp_tz(9)
+
   - name: orders
+    description: ""
     columns:
       - name: order_id
+        data_type: varchar
+        description: ""
       - name: shipping_service
+        data_type: varchar
+        description: ""
       - name: shipping_cost
+        data_type: float
+        description: ""
       - name: address_id
+        data_type: varchar
+        description: ""
+        data_tests:
+          - relationships:
+              field: ref('stg_sql_server_dbo_addresses')
+              to: orders
       - name: created_at
+        data_type: timestamp_tz
+        description: ""
       - name: promo_id
+        data_type: varchar
+        description: ""
         data_tests:
           - relationships:
               arguments:
                 field: promo_id
                 to: ref('promos')
-      - name: estimated_delivery
+      - name: estimated_delivery_at
+        data_type: timestamp_tz
+        description: ""
       - name: order_cost
+        data_type: float
+        description: ""
       - name: user_id
+        data_type: varchar
+        description: ""
+        data_tests:
+          - relationships:
+              field: ref('stg_sql_server_dbo_users')
+              to: orders
       - name: order_total
+        data_type: float
+        description: ""
       - name: delivered_at
+        data_type: timestamp_tz
+        description: ""
       - name: tracking_id
+        data_type: varchar
+        description: ""
       - name: status
+        data_type: varchar
+        description: ""
       - name: _fivetran_deleted
+        data_type: boolean
+        description: ""
       - name: _fivetran_synced
+        data_type: timestamp_tz
+        description: ""
 
   - name: order_items
+    description: ""
     columns:
       - name: order_id
+        data_type: varchar
+        description: ""
+        data_tests:
+          - relationships:
+              field: ref('stg_sql_server_dbo_orders')
+              to: order_items
       - name: product_id
+        data_type: varchar
+        description: ""
+        data_tests:
+          - relationships:
+              field: ref('stg_sql_server_dbo_products')
+              to: order_items
       - name: quantity
+        data_type: number
+        description: ""
       - name: _fivetran_deleted
+        data_type: boolean
+        description: ""
       - name: _fivetran_synced
+        data_type: timestamp_tz
+        description: ""
 
   - name: products
     config:
@@ -77,59 +140,263 @@ models:
       Data about all products in demo.
     columns:
       - name: product_id
+        data_type: text
         data_tests:
           - not_null
+        constraints:
+          - type: not_null
+        description: >
+          UUID for each unique product on the platform.
+
+      - name: product_name
         data_type: text
         constraints:
           - type: not_null
         description: >
-          UUID for each unique product on platform.
-      - name: product_name
-        data_type: TEXT                      
-        constraints:
-          - type: not_null
-        description: >
           Name of the product.
+
       - name: unit_price_usd
         data_type: real
         constraints:
           - type: not_null
         description: >
-          Price of the product.
+          Price of the product in USD.
+
       - name: inventory
-        data_type: NUMBER                      
+        data_type: number
         constraints:
           - type: not_null
         description: >
-          Amount of the inventory we have for this product.
+          Amount of inventory available for this product.
+
       - name: date_load
-        data_type: TIMESTAMP_TZ
+        data_type: timestamp_tz
         constraints:
-          - type: not_null   
+          - type: not_null
         description: >
-          Date that the data was loaded.
+          Date when the data was loaded.
+
+      - name: _fivetran_deleted
+        data_type: boolean
+        description: >
+          Flag indicating if the record was deleted in the source system.
+
+      - name: _fivetran_synced
+        data_type: timestamp_tz
+        description: >
+          Timestamp indicating when the record was last synced by Fivetran.
 
   - name: promos
+    description: ""
     columns:
       - name: promo_id
-        data_type: varchar(50)
+        data_type: varchar
+        description: ""
       - name: discount
-        data_type: float
+        data_type: number
+        description: ""
       - name: status
-        data_type: varchar(50)
+        data_type: varchar
+        description: ""
       - name: _fivetran_deleted
+        data_type: boolean
+        description: ""
       - name: _fivetran_synced
+        data_type: timestamp_tz
+        description: ""
+
+  - name: events
+    description: ""
+    columns:
+      - name: event_id
+        data_type: varchar
+        description: ""
+      - name: page_url
+        data_type: varchar
+        description: ""
+      - name: event_type
+        data_type: varchar
+        description: ""
+      - name: user_id
+        data_type: varchar
+        description: ""
+        data_tests:
+          - relationships:
+              field: ref('stg_sql_server_dbo_users')
+              to: events
+      - name: product_id
+        data_type: varchar
+        description: ""
+        data_tests:
+          - relationships:
+              field: ref('stg_sql_server_dbo_products')
+              to: events
+      - name: session_id
+        data_type: varchar
+        description: ""
+      - name: created_at
+        data_type: timestamp_ntz
+        description: ""
+      - name: order_id
+        data_type: varchar
+        description: ""
+        data_tests:
+          - relationships:
+              field: ref('stg_sql_server_dbo_orders')
+              to: events
+      - name: _fivetran_deleted
+        data_type: boolean
+        description: ""
+      - name: _fivetran_synced
+        data_type: timestamp_tz
+        description: ""
+
+  - name: order_items
+    description: ""
+    columns:
+      - name: order_id
+        data_type: varchar
+        description: ""
+      - name: product_id
+        data_type: varchar
+        description: ""
+      - name: quantity
+        data_type: number
+        description: ""
+      - name: _fivetran_deleted
+        data_type: boolean
+        description: ""
+      - name: _fivetran_synced
+        data_type: timestamp_tz
+        description: ""
+
+  - name: orders
+    description: ""
+    columns:
+      - name: order_id
+        data_type: varchar
+        description: ""
+      - name: shipping_service
+        data_type: varchar
+        description: ""
+      - name: shipping_cost
+        data_type: float
+        description: ""
+      - name: address_id
+        data_type: varchar
+        description: ""
+      - name: created_at
+        data_type: timestamp_tz
+        description: ""
+      - name: promo_id
+        data_type: varchar
+        description: ""
+      - name: estimated_delivery_at
+        data_type: timestamp_tz
+        description: ""
+      - name: order_cost
+        data_type: float
+        description: ""
+      - name: user_id
+        data_type: varchar
+        description: ""
+      - name: order_total
+        data_type: float
+        description: ""
+      - name: delivered_at
+        data_type: timestamp_tz
+        description: ""
+      - name: tracking_id
+        data_type: varchar
+        description: ""
+      - name: status
+        data_type: varchar
+        description: ""
+      - name: _fivetran_deleted
+        data_type: boolean
+        description: ""
+      - name: _fivetran_synced
+        data_type: timestamp_tz
+        description: ""
+
+  - name: products
+    description: ""
+    columns:
+      - name: product_id
+        data_type: varchar
+        description: ""
+      - name: price
+        data_type: float
+        description: ""
+      - name: name
+        data_type: varchar
+        description: ""
+      - name: inventory
+        data_type: number
+        description: ""
+      - name: _fivetran_deleted
+        data_type: boolean
+        description: ""
+      - name: _fivetran_synced
+        data_type: timestamp_tz
+        description: ""
+
+  - name: promos
+    description: ""
+    columns:
+      - name: promo_id
+        data_type: varchar
+        description: ""
+      - name: discount
+        data_type: number
+        description: ""
+      - name: status
+        data_type: varchar
+        description: ""
+      - name: _fivetran_deleted
+        data_type: boolean
+        description: ""
+      - name: _fivetran_synced
+        data_type: timestamp_tz
+        description: ""
 
   - name: users
+    description: ""
     columns:
       - name: user_id
+        data_type: varchar
+        description: ""
+        data_tests:
+          - relationships:
+                to: ref('stg_sql_server_dbo_addresses')
+                field: address_id  
       - name: updated_at
+        data_type: timestamp_tz
+        description: ""
       - name: address_id
+        data_type: varchar
+        description: ""
       - name: last_name
+        data_type: varchar
+        description: ""
       - name: created_at
+        data_type: timestamp_tz
+        description: ""
       - name: phone_number
+        data_type: varchar
+        description: ""
       - name: total_orders
+        data_type: number
+        description: ""
       - name: first_name
+        data_type: varchar
+        description: ""
       - name: email
+        data_type: varchar
+        description: ""
       - name: _fivetran_deleted
+        data_type: boolean
+        description: ""
       - name: _fivetran_synced
+        data_type: timestamp_tz
+        description: ""
