--- a/models/staging/googlesheets/_googlesheets_sources.yml
+++ b/models/staging/googlesheets/_googlesheets_sources.yml
@@ -49,3 +49,11 @@ sources:
               Date that the data was loaded.
             data_tests:
               - not_null
+
+
+      - name: users
+        columns:
+          - name: Nombre
+          - name: DNI
+          - name: email
+          - name: fecha_alta_sistema
