--- a/models/staging/googlesheets/_googlesheets_sources.yml
+++ b/models/staging/googlesheets/_googlesheets_sources.yml
@@ -4,7 +4,7 @@ sources:
     description: >
       Raw data demo from Database.
     schema: google_sheets # this is the schema our raw data lives in
-    database: alumno22_dev_bronze_db # this is the name of our database
+    database: "{{ env_var('DBT_ENVIRONMENTS') }}_BRONZE_DB" # this is the name of our database
 
     quoting:
       database: false
